# api-genSlam

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
tests/: test_api.py
