[project]
name = "api-genslam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "fastapi>=0.120.4",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.3",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=."
testpaths = ["tests"]
